# combot

./: README.md  todo.txt
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: teleop.pc
catkin_ws/devel/share/teleop/cmake/: teleopConfig.cmake
catkin_ws/src/teleop/: CMakeLists.txt  package.xml
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: controller.pc  launcher.pc  robot.pc  robot_msgs.pc  teleop.pc
devel/lib/python2.7/dist-packages/teleop/msg/: __init__.py
devel/share/common-lisp/ros/teleop/msg/: teleop-msg.asd
devel/share/controller/cmake/: controllerConfig.cmake
devel/share/launcher/cmake/: launcherConfig.cmake
devel/share/robot/cmake/: robotConfig.cmake
devel/share/robot_msgs/cmake/: robot_msgsConfig.cmake
devel/share/teleop/cmake/: teleop-msg-extras.cmake  teleop-msg-paths.cmake  teleopConfig.cmake
install/include/teleop/: robotcmd.h
install/lib/pkgconfig/: controller.pc
install/lib/python2.7/dist-packages/teleop/msg/: _robotcmd.py
install/share/controller/cmake/: controllerConfig.cmake
install/share/launcher/: package.xml
install/share/roseus/ros/teleop/: manifest.l
install/share/teleop/: package.xml
install/share/teleop/cmake/: teleop-msg-extras.cmake
src/controller/: CMakeLists.txt
src/controller/src/: robot.py
src/launcher/: CMakeLists.txt
src/launcher/launch/: spektrum_mk1.launch
src/robot/src/: motor.py  robot.py
src/teleop/: CMakeLists.txt  package.xml
src/teleop/msg/: robotcmd.msg
src/teleop/src/: tele.py  teleop.py
(+6 files in other folders)
