<?xml version="1.0"?>
<package>
  <name>teleop</name>
  <version>0.0.1</version>
  <description>The teleop package contains code to take in user input (keyboard and/or USB joystick) and publishes parameters for the robot's motors.</description>
  <maintainer email="austinw@mit.edu">Austin Wang</maintainer>
  <license>MIT</license>
  <author email="austinw@mit.edu">Austin Wang</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robot_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
